[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "noos-test"
version = "1.0.0"
license = {text = "Proprietary"}
dynamic = ["readme"]

[tool.setuptools.dynamic]
readme = {file = ["README.md"]}

[tool.setuptools.packages.find]
namespaces = false
where = ["src"]
include = ["*noos_test*"]

[tool.black]
line-length = 99
target_version = ['py312']

[tool.isort]
line_length = 99
multi_line_output = 3
lines_after_imports = 2
default_section = "THIRDPARTY"
known_first_party = "noos_test"
sections = "STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER"

[tool.ruff]
line-length = 99
src = ["src"]
target-version = "py312"

[tool.ruff.lint]
ignore = [
    "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107", # Pydocstyle
    "F405", "W391", "E203", "E701" # Flake8
]
select = ["E"]

[tool.ruff.lint.isort]
lines-after-imports = 2
default-section = "third-party"
known-first-party = ["noos_test"]
section-order = ["standard-library", "third-party", "first-party", "local-folder"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.mypy]
install_types = true
non_interactive = true
incremental = true
warn_unused_configs = false
warn_unused_ignores = true
check_untyped_defs = true
warn_redundant_casts = true
ignore_missing_imports = true

[tool.pytest.ini_options]
python_files = "test_*.py"
python_classes = "Test"
python_functions = "test_*"
filterwarnings = "error::RuntimeWarning"
pythonpath = ["src"]
junit_family = "xunit2"
addopts = "--junitxml=pytest.xml"

[tool.coverage.run]
source = "python/*"
